--- a/Gerenciador/pom.xml
+++ b/Gerenciador/pom.xml
@@ -54,11 +54,11 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.tomcat</groupId>
-			<artifactId>tomcat</artifactId>
-			<version>8.5.0</version>
-			<type>pom</type>
+			<groupId>javax.persistence</groupId>
+			<artifactId>javax.persistence-api</artifactId>
+			<version>2.2</version>
 		</dependency>
+
 
 	</dependencies>
 
