--- a/Gerenciador/pom.xml
+++ b/Gerenciador/pom.xml
@@ -59,6 +59,11 @@
 			<version>2.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.16</version>
+		</dependency>
 
 	</dependencies>
 
